--- a/TraiHat/webapp/templates/home/base2.html
+++ b/TraiHat/webapp/templates/home/base2.html
@@ -227,7 +227,7 @@
 </div>
 <div class="copyright wow fadeInDown" data-wow-duration=".8s" data-wow-delay=".2s">
     <div class="container">
-        <p>© 2016 Style Blog. All rights reserved | Design by <a href="http://w3layouts.com/">W3layouts</a></p>
+        <p>© 2020 Blog Tin Tức </p>
     </div>
 </div>
 
