--- a/TraiHat/webapp/templates/admin/base.html
+++ b/TraiHat/webapp/templates/admin/base.html
@@ -8,7 +8,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
         {% block title %}
-            <title>Home-Admin</title>
+            <title>{{ params.get('title') }}</title>
         {% endblock %}
 
 
