--- a/TraiHat/webapp/templates/error.html
+++ b/TraiHat/webapp/templates/error.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Flashy Error Page a Flat Responsive Widget Template :: w3layouts</title>
+    <title>{{ code }}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <meta name="keywords"
