--- a/TraiHat/webapp/templates/home/index.html
+++ b/TraiHat/webapp/templates/home/index.html
@@ -1,101 +1,112 @@
 {% extends "home/base2.html" %}
-{% block script%}
-<script>
-    images = $('.img_blog')
-    images.remove()
+{% block script %}
+    <script>
+        images = $('.img_blog')
+        images.remove()
 
 
-</script>
+    </script>
 {% endblock %}
 
 {% block head %}
-{{ super() }}
-<link href="{{ url_for('static',filename='css/HomeStyle.css') }}">
+    {{ super() }}
+    <link href="{{ url_for('static',filename='css/HomeStyle.css') }}">
+
 {% endblock head %}
 
 
 {% block body_left %}
-<div class="tech-no">
-    <!-- technology-top -->
-    {% for item in params.get('blog') %}
-    {% if loop.index <= 1 %}
+    <div class="tech-no">
+        <!-- technology-top -->
+        {% for item in params.get('blog') %}
+            {% if loop.index <= 1 %}
 
-    <div class="tc-ch wow fadeInDown" data-wow-duration=".8s" data-wow-delay=".2s">
+                <div class="tc-ch wow fadeInDown" data-wow-duration=".8s" data-wow-delay=".2s">
 
-        <div class="tch-img">
-            <a href="{{url_for('blog', id = item.id|encodeID)}}"><img src="{{item.image}}0.png" class="img-responsive" alt="" style="width:100%"></a>
-        </div>
+                    <div class="tch-img">
+                        <a href="{{ url_for('blog', id = item.id|encodeID) }}"><img src="{{ item.image }}0.png"
+                                                                                    class="img-responsive" alt=""
+                                                                                    style="width:100%"></a>
+                    </div>
 
-        <h3><a href="{{url_for('blog', id = item.id|encodeID)}}">{{item.title}}</a></h3>
-        <h6>BY <a href="{{url_for('profile', id = item.user.id|encodeID)}}">{{item.user.pseudonym}} </a>{{item.ngaytaobaiviet |format_datetime}}</h6>
-        <p>{{item.noiDung|safe}}</p>
-        <div class="bht1">
-            <a href="singlepage.html">Continue Reading</a>
-        </div>
+                    <h3><a href="{{ url_for('blog', id = item.id|encodeID) }}">{{ item.title }}</a></h3>
+                    <h6>BY <a
+                            href="{{ url_for('profile', id = item.user.id|encodeID) }}">{{ item.user.pseudonym }} </a>{{ item.ngaytaobaiviet |format_datetime }}
+                    </h6>
+                    <p>{{ item.noiDung|safe }}</p>
 
-        <div class="clearfix"></div>
-    </div>
-    {% endif %}
-    {{break}}
-    {%endfor%}
-    {%for item in params.get('blog')%}
-    <div class="wthree">
-        <div class="col-md-6 wthree-left wow fadeInDown" data-wow-duration=".8s" data-wow-delay=".2s">
-            <div class="tch-img">
-                <a href="{{url_for('blog', id = item.id|encodeID)}}"><img src="{{item.image}}0.png"
-                                                                          class="img-responsive" alt=""
-                                                                          style="width:100%"></a>
+
+                    <div class="clearfix"></div>
+                </div>
+            {% endif %}
+            {{ break }}
+        {% endfor %}
+        <style>
+            .content-short {
+                height: 70px;
+                overflow: hidden;
+                text-overflow: ellipsis;
+            }
+        </style>
+        {% for item in params.get('blog') %}
+            <div class="wthree">
+                <div class="col-md-6 wthree-left wow fadeInDown" data-wow-duration=".8s" data-wow-delay=".2s">
+                    <div class="tch-img">
+                        <a href="{{ url_for('blog', id = item.id|encodeID) }}"><img src="{{ item.image }}0.png"
+                                                                                    class="img-responsive" alt=""
+                                                                                    style="width:100%"></a>
+                    </div>
+                </div>
+                <div class="col-md-6 wthree-right wow fadeInDown" data-wow-duration=".8s" data-wow-delay=".2s">
+                    <h3 style="word-break: break-all;"> <a  href="{{ url_for('blog', id = item.id|encodeID) }}"> {{ item.title }}</a></h3>
+                    <h6>BY <a
+                            href="{{ url_for('profile', id = item.user.id|encodeID) }}"> {{ item.user.pseudonym }}</a> {{ item.ngaytaobaiviet |format_datetime }}
+                    </h6>
+                    <div class="content-short">{{ item.noiDung|safe }}</div>
+                    <div class="bht1">
+                        <a href="{{ url_for('blog', id = item.id|encodeID) }}">Read More</a>
+                    </div>
+                    <div class="clearfix"></div>
+
+                </div>
+                <div class="clearfix"></div>
             </div>
-        </div>
-        <div class="col-md-6 wthree-right wow fadeInDown" data-wow-duration=".8s" data-wow-delay=".2s">
-            <h3><a href="{{url_for('blog', id = item.id|encodeID)}}">{{item.title}}</a></h3>
-            <h6>BY <a href="{{url_for('profile', id = item.user.id|encodeID)}}">{{item.user.pseudonym}}</a>{{item.ngaytaobaiviet |format_datetime}}
-            </h6>
-            <p>{{item.noiDung|safe}}</p>
-            <div class="bht1">
-                <a href="{{url_for('blog', id = item.id|encodeID)}}">Read More</a>
-            </div>
-            <div class="clearfix"></div>
 
-        </div>
-        <div class="clearfix"></div>
+        {% endfor %}
+
     </div>
-
-    {% endfor %}
-
-</div>
 
 
 {% endblock %}
-{%block body_right%}
+{% block body_right %}
 
-<div class="tech-btm">
-    <div class="search-1 wow fadeInDown" data-wow-duration=".8s" data-wow-delay=".2s">
-        <form action="#" method="post">
-            <input type="search" name="Search" value="Search" onfocus="this.value = '';"
-                   onblur="if (this.value == '') {this.value = 'Search';}" required="">
-            <input type="submit" value=" ">
-        </form>
-    </div>
-    <h4>BÀI VIẾT NỔI BẬT</h4>
-    {% for item in params.get('blog') %}
-    {% if loop.index >= 5 %}
-    {{break}}
-    {% endif %}
-    <div class="blog-grids wow fadeInDown" data-wow-duration=".8s" data-wow-delay=".2s">
-        <div class="blog-grid-left">
-            <a href="{{url_for('blog', id = item.id|encodeID)}}"><img src="{{item.image}}0.png"
-                                                                      class="img-responsive" alt=""></a>
+    <div class="tech-btm">
+        <div class="search-1 wow fadeInDown" data-wow-duration=".8s" data-wow-delay=".2s">
+            <form action="#" method="post">
+                <input type="search" name="Search" value="Search" onfocus="this.value = '';"
+                       onblur="if (this.value == '') {this.value = 'Search';}" required="">
+                <input type="submit" value=" ">
+            </form>
         </div>
-        <div class="blog-grid-right">
+        <h4>BÀI VIẾT NỔI BẬT</h4>
+        {% for item in params.get('blog') %}
+            {% if loop.index >= 5 %}
+                {{ break }}
+            {% endif %}
+            <div class="blog-grids wow fadeInDown" data-wow-duration=".8s" data-wow-delay=".2s">
+                <div class="blog-grid-left">
+                    <a href="{{ url_for('blog', id = item.id|encodeID) }}"><img src="{{ item.image }}0.png"
+                                                                                class="img-responsive" alt=""></a>
+                </div>
+                <div class="blog-grid-right">
 
-            <h5><a href="{{url_for('blog', id = item.id|encodeID)}}">{{item.title}}</a></h5>
-        </div>
-        <div class="clearfix"></div>
+                    <h5><a href="{{ url_for('blog', id = item.id|encodeID) }}">{{ item.title }}</a></h5>
+                </div>
+                <div class="clearfix"></div>
+            </div>
+        {% endfor %}
+
     </div>
-    {% endfor %}
 
-</div>
-
-{% endblock%}
+{% endblock %}
 
