--- a/TraiHat/webapp/templates/login.html
+++ b/TraiHat/webapp/templates/login.html
@@ -42,7 +42,7 @@
                     <a href="#"><small>Forgot password?</small></a>
                     <p class=" text-center"><small>Do not have an account?</small></p>
                     <a class="btn  btn-default btn-block" href="{{ url_for('register') }}">Create an account</a>
-                    <p>Be-Admin Admin &copy; 2015</p>
+                    <p>Blog &copy; 2020</p>
                 </form>
             </div>
         </div>
