sửa giao diện thêm gửi thông báo khi đăng nhập

--- a/TraiHat/webapp/templates/ChangePassword.html
+++ b/TraiHat/webapp/templates/ChangePassword.html
@@ -8,13 +8,13 @@
                 {% set form = params.get('form') %}
                 {{ form.csrf_token() }}
                 {{ form.password_Old.label }}
-                {{ form.password_Old(class='form-control',placeholder="Password" ,minlength = 8, maxlength = 50) }}
+                {{ form.password_Old(class='form-control', autocomplete ='',placeholder=form.password_Old.label.text ,minlength = 8, maxlength = 50) }}
                 <br>
                 {{ form.password_New.label }}
-                {{ form.password_New(class='form-control',placeholder="Password" ,minlength = 8, maxlength = 50) }}
+                {{ form.password_New(class='form-control',autocomplete ='',placeholder=form.password_New.label.text ,minlength = 8, maxlength = 50) }}
                 <br>
                 {{ form.password_Comfirm.label }}
-                {{ form.password_Comfirm(class='form-control',placeholder="Password" ,minlength = 8, maxlength = 50) }}
+                {{ form.password_Comfirm(class='form-control',autocomplete='',placeholder=form.password_Comfirm.label.text ,minlength = 8, maxlength = 50) }}
                 <button type="submit" class="btn btn-primary " style="margin-top:1em ">Change Password</button>
             </form>
         </div>
